Made the textView more visible by adding a light background color

--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -96,8 +96,11 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BFd-RV-Lyv">
-                                <rect key="frame" x="20" y="214" width="374" height="668"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <rect key="frame" x="20" y="214" width="374" height="250"/>
+                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="7P7-aa-Rbt"/>
+                                </constraints>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -110,7 +113,6 @@
                             <constraint firstItem="eQ7-1i-RAE" firstAttribute="trailing" secondItem="2Au-wJ-4h7" secondAttribute="trailing" constant="20" id="8vC-9G-ZEB"/>
                             <constraint firstItem="2Au-wJ-4h7" firstAttribute="top" secondItem="eQ7-1i-RAE" secondAttribute="top" constant="20" id="BcV-7B-kQW"/>
                             <constraint firstItem="2Au-wJ-4h7" firstAttribute="leading" secondItem="eQ7-1i-RAE" secondAttribute="leading" constant="20" id="Nww-YB-O2a"/>
-                            <constraint firstItem="BFd-RV-Lyv" firstAttribute="bottom" secondItem="eQ7-1i-RAE" secondAttribute="bottom" constant="20" id="UxO-VT-h17"/>
                             <constraint firstItem="eQ7-1i-RAE" firstAttribute="trailing" secondItem="BFd-RV-Lyv" secondAttribute="trailing" constant="20" id="iXc-7V-lyy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eQ7-1i-RAE"/>
